--- a/blocks/places/place/website/__link/place__link.css
+++ b/blocks/places/place/website/__link/place__link.css
@@ -17,6 +17,7 @@
 @media screen and (max-width: 1024px) {
     .place__link {
     width: 456px;
+    }
 }
 
 @media screen and (max-width: 768px) {
