--- a/blocks/places/place/website/__url-heading/place__url-heading.css
+++ b/blocks/places/place/website/__url-heading/place__url-heading.css
@@ -15,6 +15,7 @@
 @media screen and (max-width: 1024px) {
     .place__url-heading {
     width: 456px;
+    }
 }
 
 @media screen and (max-width: 768px) {
