--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,7 @@
 .place__image {
     width: 460px;
     height: 460px;
-
+    margin: 0;
 }
 
 @media screen and (max-width: 1024px) {
@@ -22,6 +22,5 @@
     .place__image {
         width: 320px;
         height: 320px;
-
     }
 }  
