--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,30 +1,21 @@
 .place__title {
-    width: 460px;
-    height: 152px;
-    margin-top: 0;
-    display: flex;
-    align-items: flex-end;
-    
+    width: 100%;
+
+    margin: 0;
     font-size: 72px;
     font-style: normal;
     font-weight: 900;
     line-height: 76px;
     letter-spacing: 0em;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 
-}
-
-@media screen and (max-width: 1024px) {
-    .place__title {
-        width: 440px;
-        height: 152px;  
-    }
 }
 
 @media screen and (max-width: 768px) {
     .place__title {
-        height: 92px;
-        width: 340px;
         font-size: 42px;
         line-height: 46px;
     }
@@ -32,11 +23,9 @@
 
 @media screen and (max-width: 320px) {
     .place__title {
-        height: 35px;
         width: 288px;
         font-size: 32px;
         line-height: 35px;
         margin-left: 16px;
-
     }
 }  
