--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,7 +1,8 @@
 .place__paragraphs {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    width: 484px;
+    margin: 0;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -9,17 +10,11 @@
     letter-spacing: 0em;
     text-align: left;
 
-}
 
-@media screen and (max-width: 1024px) {
-    .place__paragraphs {
-    width: 456px;
-    }
 }
 
 @media screen and (max-width: 768px) {
     .place__paragraphs {
-    width: 352px;
     font-size: 16px;
     line-height: 26px;
     }
@@ -27,9 +22,11 @@
 
 @media screen and (max-width: 320px) {
     .place__paragraphs {
-    width: 288px;
+    width: 320px;
     margin-left: 16px;
+    margin-right: 16px;
     font-size: 16px;
     line-height: 26px;
+    
     }
 }  
