--- a/blocks/place/__website/_link/place__website_link.css
+++ b/blocks/place/__website/_link/place__website_link.css
@@ -1,6 +1,5 @@
-.place__link {
-    width: 484px;
-    height: 22px;
+.place__website_link {
+    margin-top: 12px;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -14,17 +13,6 @@
     opacity: 0.8;
 }
 
-@media screen and (max-width: 1024px) {
-    .place__link {
-    width: 456px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .place__link {
-    width: 352px;
-    }
-}
 
 @media screen and (max-width: 320px) {
     .place__link {
