--- a/pages/index.css
+++ b/pages/index.css
@@ -23,14 +23,15 @@
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 @import url(../blocks/places/places.css);
-@import url(../blocks/places/place/places__place.css);
-@import url(../blocks/places/place/__title/place__title.css);
-@import url(../blocks/places/place/website/place__website.css);
-@import url(../blocks/places/place/website/__url-heading/place__url-heading.css);
-@import url(../blocks/places/place/website/__link/place__link.css);
-@import url(../blocks/places/place/__image/place__image.css);
-@import url(../blocks/places/place/paragraphs/place__paragraphs.css);
-@import url(../blocks/places/place/paragraphs/__paragraph/place__paragraph.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__paragraphs/place__paragraphs.css);
+@import url(../blocks/place/__website/_link/place__website_link.css);
+@import url(../blocks/place/__website/_url-heading/place__website_url-heading.css);
+@import url(../blocks/place/__paragraphs/_paragraph/place__paragraphs_paragraph.css);
+
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__title/cover__title.css);
