--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,6 +1,23 @@
 .content {
-    width: 1280px;
-
     margin-left: auto;
     margin-right: auto;
+    width: 1280px;
+}
+
+@media screen and (max-width: 1024px) {
+    .content {
+        width: 1024px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .content {
+        width: 768px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .content {
+        width: 320px;
+    }
 }
