--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 .footer {
     width: 1184px;
-    margin: 92px auto 24px auto;
+    margin: 92px auto 0 auto;
+    padding-bottom: 24px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -9,28 +10,30 @@
 @media screen and (max-width: 1280px) {
     .footer {
         width: 1184px;
-        margin: 92px 48px 24px 48px;
+
     }
 }
 
 @media screen and (max-width: 1024px) {
     .footer {
         width: 928px;
-        margin: 92px 48px 24px 48px;
+
     }
 }
 
 @media screen and (max-width: 768px) {
     .footer {
         width: 720px;
-        margin: 88px 24px 24px 24px;
+        margin-top: 88px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .footer {
         width: 186px;
-        margin: 64px 118px 24px 24px;
+
+        margin: 64px 118px 0 24px;
+        
         display: flex;
         flex-direction: column;
     }
