--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,5 @@
 .lead__subtitle {
-    max-width: 640px;
-    max-height: 72px;
+    width: 640px;
     margin: 0 172px 64px 172px;
     font-family: Inter;
     font-size: 30px;
@@ -9,7 +8,6 @@
     line-height: 36px;
     letter-spacing: 0em;
     text-align: center;
-
 }
 
 @media screen and (max-width: 1024px) {
@@ -26,8 +24,7 @@
 
 @media screen and (max-width: 320px) {
     .lead__subtitle {
-    max-width: 288px;
-    max-height: 40px;
+    width: 288px;
     margin: 0 16px 40px 16px;
     font-size: 16px;
     line-height: 20px;
