--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../fonts/inter.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/header/header.css);
