--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,34 +1,41 @@
 .cover__title {
-    width: 560px;
-    margin: 245px 312px 0 312px;
-    font-size: 72px;
-    font-style: normal;
+    margin: 245px auto 0 auto;
+    max-width: 560px;
+    z-index: 3;
     font-weight: 900;
-    line-height: 76px;
-    letter-spacing: 0em;
+    font-size: 4.5rem;
+    line-height: 1;
     text-align: center;
-    color: #ffffff;
-    position: relative;
-    text-decoration: none;
+
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .cover__title {
-        margin: 195px 232px 0 232px;
+        margin-top: 195px;
+
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .cover__title {
-        margin: 115px 104px 0 104px;
+        margin-top: 115px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover__title {
+        max-width: 288px;
+        margin: 33px auto 0 auto;
+        font-size: 2rem;
+
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover__title {
-        width: 288px;
         margin: 33px 16px 0 16px;
-        font-size: 32px;
-        line-height: 35px;
+        min-width: 288px;
+        font-size: 2rem;
+
     }
 }
