--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,50 +1,42 @@
 .cover {
-    width: 1184px;
-    height: 740px;
-    margin: 92px 48px 0 48px;
-    background-image: url(../../images/__background.png);
+    max-width: 1184px;
+    margin: 92px auto 0 auto;
+
     background-size: cover;
     box-sizing: border-box;
     position: relative;
     display: flex;
     flex-direction: column;
+
 }
 
-.cover::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background-color: #2a2c2f;
-    opacity: 0.3;
-}
-
-.cover:hover::before {
-    opacity: 0.8;
-}
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .cover {
-        width: 1024px;
-        height: 640px;
-        margin: 92px 0 0 0;
+        max-width: 1024px;
+        margin: 92px auto 0 auto;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .cover {
-        width: 768px;
-        height: 480px;
-        margin: 90px 0 0 0;
+        max-width: 720px;
+        margin: 90px auto 0 auto;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover {
+        max-width: 320px;
+        margin: 66px auto 0 auto;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover {
-        width: 320px;
-        height: 200px;
+        min-width: 320px;
+
         margin: 66px 0 0 0;
+
+
     }
 }
