--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,19 +1,30 @@
 .footer__copyright {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 16px;
+    line-height: 1;
     letter-spacing: 0em;
     text-align: right;
     color: #ffffff;
+    display: flex;
+    align-self: flex-end;
 }
+
+@media screen and (max-width: 767px) {
+    .footer__copyright {
+        margin-left: 16px;
+        text-align: left;
+        margin-top: 47px;
+        align-self: flex-start;
+    }
+}
+
 
 @media screen and (max-width: 320px) {
     .footer__copyright {
         margin-left: 0;
-        font-size: 14px;
-        line-height: 14px;
         text-align: left;
         margin-top: 47px;
+        align-self: flex-start;
     }
 }
