--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,34 +1,45 @@
 .footer__link {
     margin-right: 18px;
-    font-size: 16px;
+
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 18px;
+    line-height: 1;
     letter-spacing: 0em;
     text-align: left;
     color: #ffffff;
     text-decoration: none;
+
 }
 
-.footer__link:nth-of-type(5) {
-    margin-right: 0;
-}
+
 
 .footer__link:hover {
     opacity: 0.8;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .footer__link {
-        margin-bottom: 32px;
-        margin-left: 0;
-        font-size: 24px;
-        line-height: 24px;
+        font-size: 1.5rem;
         display: flex;
         flex-direction: column;
+
+        margin: 0 auto 32px 16px;
+    }
+        .footer__link:nth-of-type(5) {
+            margin: 0 auto 0 16px;
+        }
     }
 
+@media screen and (max-width: 320px) {
+    .footer__link {
+        font-size: 1.5rem;
+        display: flex;
+        flex-direction: column;
+
+        margin: 0 auto 32px 0;
+    }
     .footer__link:nth-of-type(5) {
-        margin-bottom: 0;
+        margin: 0 auto 0 0;
     }
 }
