--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,39 +1,39 @@
 .footer {
-    width: 1184px;
-    margin: 92px auto 0 auto;
-    padding-bottom: 24px;
+    max-width: 1184px;
+    margin: 92px auto 24px auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1279px) {
     .footer {
-        width: 1184px;
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .footer {
+        max-width: 720px;
+        margin: 88px auto 24px auto;
 
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 767px) {
     .footer {
-        width: 928px;
+        max-width: 320px;
 
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .footer {
-        width: 720px;
-        margin-top: 88px;
+        margin: 64px auto 24px auto;
+        display: flex;
+        flex-direction: column;
     }
 }
 
 @media screen and (max-width: 320px) {
     .footer {
-        width: 186px;
-
-        margin: 64px 118px 0 24px;
-        
+        min-width: 320px;
+        margin: 64px 16px 24px 16px;
         display: flex;
         flex-direction: column;
     }
