--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,26 +1,37 @@
 .header__lang-link {
-    width: 30px;
-    height: 28px;
-    margin: 18px 0 6px 0;
     color: #FFFFFF;
-}
 
-.header__lang-link:nth-of-type(1) {
     margin-right: 18px;
+    margin-top: 18px;
+    margin-bottom: 6px;
+    
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    letter-spacing: 0em;
+    text-align: right;
+
 }
 
-@media screen and (max-width: 320px) {
+.header__lang-link:hover {
+    opacity: 80%;
+}
+
+.header__lang-link:nth-of-type(2) {
+    text-decoration: none;
+    margin-right: 0;
+    padding-right: 0;
+
+}
+
+
+@media screen and (max-width: 767px) {
     .header__lang-link {
-    width: 22px;
-    height: 20px;
-    margin: 14px 0 8px 0;
+
+        font-size: 1.125rem;
+        margin-top: 14px;
+        margin-bottom: 8px;
+
     }
-
-    .header__lang-link:nth-of-type(1) {
-        width: 22px;
-        height: 20px;
-        margin-right: 18px;
-        }
-    
-}  
-
+}
