--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,11 +1,12 @@
 .header__logo {
-    width: 176px;
-    height: 52px;
+    max-width: 176px;
+    max-height: 52px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .header__logo {
         max-width: 142px;
         max-height: 42px;
+
     }
 }
