--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,46 +1,40 @@
 .header {
-    width: 1184px;
-    height: 52px;
-    padding-top: 28px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 1184px;
+
+    margin: 28px auto 0 auto;
+
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-}
 
-@media screen and (max-width: 1280px) {
+}
+@media screen and (max-width: 1279px) {
     .header {
-        padding-top: 28px;
-        margin-left: 48px;
-        margin-right: 48px;
+
+        margin: 28px auto 0 auto;
+        max-width: 928px;
     }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
     .header {
-        width: 928px;
-        padding-top: 28px;
-        margin-left: 48px;
-        margin-right: 48px;
+
+        margin: 28px auto 0 auto;
+        max-width: 720px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .header {
-        width: 720px;
-        padding-top: 28px;
-        margin-left: 24px;
-        margin-right: 24px;
+        max-width: 288px;
+        margin: 16px auto 0 auto;
     }
 }
 
 @media screen and (max-width: 320px) {
     .header {
-        width: 288px;
-        height: 42px;
-        padding-top: 16px;
-        margin-left: 16px;
-        margin-right: 16px;
+        min-width: 288px;
+        margin: 16px 16px 0 16px;
+
     }
 }
+
