--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,8 +1,8 @@
 .intro__list {
-    width: 690px;
+
     margin: 33px 0 0 0;
     padding: 0;
-    font-size: 12px;
+    font-size: .75rem;
     font-style: normal;
     font-weight: 400;
     line-height: 18px;
@@ -11,16 +11,34 @@
     list-style-type: none;
 }
 
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1279px) {
     .intro__list {
-    width: 720px;
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .intro__list {
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .intro__list {
+        margin-left: 16px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .intro__list {
-    width: 288px;
-    margin: 34px 0 0 0;
+        margin-left: 16px;
+        min-width: 288px;
+
     }
 }  
+
+
+
+
+
+
