--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,22 +1,42 @@
 .intro__text {
-    width: 690px;
-    margin: 40px 0 0 0;
-    font-size: 16px;
+    margin-top: 40px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 163%;
     letter-spacing: 0em;
     text-align: left;
 }
 
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 1279px) {
     .intro__text {
-    width: 720px;
+        margin-left: 24px;
+    }
+}
+
+
+@media screen and (max-width: 1023px) {
+    .intro__text {
+        margin-left: 24px;
+    }
+}
+
+
+@media screen and (max-width: 767px) {
+    .intro__text {
+        margin-left: 16px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .intro__text {
-    width: 288px;
+        margin-left: 16px;
+        min-width: 288px;
     }
 }  
+
+
+
+
+
