--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,24 +1,44 @@
 .intro__title {
-    width: 690px;
     margin: 0;
-    font-size: 54px;
+
+    font-size: 3.375rem;
     font-style: normal;
     font-weight: 900;
-    line-height: 58px;
+    line-height: 1;
     letter-spacing: 0em;
     text-align: left;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1279px) {
     .intro__title {
-        width: 720px;
+        margin-left: 24px;
     }
 }
 
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 1023px) {
     .intro__title {
-        width: 288px;
-        font-size: 32px;
-        line-height: 35px;
+        margin-left: 24px;
     }
 }
+
+
+@media screen and (max-width: 767px) {
+    .intro__title {
+        margin-left: 16px;
+    }
+}
+
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+
+        font-size: 2rem;
+        line-height: 1;
+        min-width: 288px;
+        margin-left: 16px;
+    }
+}
+
+
+
