--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,33 +1,38 @@
 .intro {
-    width: 690px;
-    height: 429px;
-    margin: 56px 148px 0 148px;
+    max-width: 984px;
+    margin: 92px auto 0 auto;
+
+
     color: #ffffff;
     display: flex;
     flex-direction: column;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .intro {
-        margin-left: 48px;
-        margin-top: 114px;
+        max-width: 928px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .intro {
-        width: 720px;
-        margin-left: 24px;
-        margin-top: 110px;
+        margin: 88px auto 0 auto;
+        max-width: 720px;
+
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .intro {
+        margin: 64px auto 0 auto;
+        max-width: 320px;
+
     }
 }
 
 @media screen and (max-width: 320px) {
     .intro {
-        width: 288px;
-        height: 754px;
-        margin-left: 16px;
-        margin-top: 86px;
-
+        margin: 64px 0 0 0;
+        min-width: 320px;
     }
 }
