--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,22 +1,38 @@
 .lead__caption {
-    width: 158px;
+
     margin-top: 8px;
-    font-size: 10px;
+    margin-left: 0;
+
+    font-size: 0.6rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 14px;
+    line-height: 1;
     letter-spacing: 0.15em;
     text-align: left;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1279px) {
     .lead__caption {
-    margin-left: 24px;
+        margin-left: 24px;
     }
-}  
+}
+
+@media screen and (max-width: 1023px) {
+    .lead__caption {
+
+
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .lead__caption {
+        margin-left: 16px;
+    }
+}
 
 @media screen and (max-width: 320px) {
     .lead__caption {
-    margin-left: 16px;
+        margin-left: 16px;
     }
-}  
+}
