--- a/blocks/lead/__group-4/lead__group-4.css
+++ b/blocks/lead/__group-4/lead__group-4.css
@@ -1,5 +1,5 @@
 .lead__group-4 {
-    width: 937px;
+    max-width: 937px;
     height: 263px;
     position: relative;
     top: 90px;
@@ -20,7 +20,7 @@
 
 @media screen and (max-width: 768px) {
     .lead__group-4 {
-    width: 731px;
+    max-width: 731px;
     height: 205px;
 
     top: 70px;
@@ -30,7 +30,7 @@
 
 @media screen and (max-width: 320px) {
     .lead__group-4 {
-    width: 304px;
+    max-width: 304px;
     height: 85px;
 
     top: 30px;
