--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,36 +1,35 @@
 .lead__title {
-    width: 720px;
-    margin: 0 132px 32px 132px;
-    font-size: 96px;
-    font-style: normal;
+    max-width: 720px;
+    margin: 0 auto 32px auto;
+
+    font-size: 6rem;
     font-weight: 900;
-    line-height: 100px;
-    letter-spacing: 0em;
+    line-height: 1;
     text-align: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .lead__title {
-    width: 720px;
-    margin: 0 104px 32px 104px;
+
+
     }
-    
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .lead__title {
-    width: 720px;
-    margin: 0 24px 32px 24px;
+        margin: 0 auto 16px auto;
+        font-size: 2.5rem;
+        max-width: 288px;
     }
-    
 }
+
+
 
 @media screen and (max-width: 320px) {
     .lead__title {
-    width: 288px;
-    margin: 0 16px 16px 16px;
-    font-size: 40px;
-    line-height: 44px;
+
+        margin: 0 16px 16px 16px;
+        font-size: 2.5rem;
+        min-width: 288px;
     }
-    
-}  
+}
