--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,26 +1,35 @@
+
+
 .photo-grid__item {
-    width: 284px;
-    height: 213px;
+    width: 100%;
+    object-fit: cover;
 }
-
-
-@media screen and (max-width: 1024px) {
+/*
+/*
+@media screen and (max-width: 1279px) {
     .photo-grid__item {
-        height: 225px;
-        width: 300px;
+        max-width: 300px;
+        max-height: 213px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .photo-grid__item {
-        height: 264px;
-        width: 352px;
+        max-width: 352px;
+        max-height: 264px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .photo-grid__item {
+        max-width: 288px;
+        max-height: 216px;
+    }
+} 
 
 @media screen and (max-width: 320px) {
     .photo-grid__item {
-        height: 216px;
-        width: 288px;
+        min-width: 288px;
+        min-height: 216px;
     }
 }    
