--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,28 +1,106 @@
 .photo-grid {
-    margin: 92px 48px 0 48px;
-    width: 1184px;
-    height: 671px;
+    margin: 92px auto 0 auto;
+    max-width: 1184px;
+
     display: grid;
-    grid-template-columns: 284px 284px 284px 284px;
-    grid-template-rows: 213px 213px 213px;
+    grid-template-columns: repeat(4, 1fr);
     gap: 16px;
+
+
 }
 
-@media screen and (max-width: 1024px) {
+
+
+@media screen and (max-width: 1279px) {
     .photo-grid {
-    width: 928px;
-    height: 942px;
+        max-width: 928px;
+        margin: 92px auto 0 auto;
+        grid-template-columns: repeat(3, 1fr);
+
+        gap: 14px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .photo-grid {
+
+    margin: 88px auto 0 auto;
+    max-width: 720px;
+
+    grid-template-columns: repeat(2, 1fr);
+
+    gap: 16px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .photo-grid {
+        max-width: 320px;
+
+        margin: 64px auto 0 auto;
+
+        grid-template-columns: 1fr;
+        gap: 12px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .photo-grid {
+        min-width: 288px;
+
+        margin: 64px 16px 0 16px;
+
+        grid-template-columns: 1fr;
+        gap: 12px;
+    }
+}
+
+/*
+@media screen and (max-width: 320px) {
+    .photo-grid {
+        min-width: 288px;
+
+        margin: 64px auto 0 auto;
+
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(12, 1fr);
+        row-gap: 12px;
+    }
+}
+
+/*
+@media screen and (max-width: 320px) {
+    .photo-grid {
+    min-width: 288px;
+
+    margin: 64px 16px 0 16px;
+
+    grid-template-columns: 288px;
+    grid-template-rows: repeat(12, 216px);
+    gap: 12px;
+    }
+} 
+
+
+
+
+
+/*@media screen and (max-width: 1023px) {
+    .photo-grid {
+    max-width: 928px;
+
     grid-template-columns: 300px 300px 300px;
     grid-template-rows: 225px 225px 225px 225px;
     gap: 14px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .photo-grid {
-    width: 720px;
-    height: 1664px;
+    max-width: 720px;
+
     margin: 88px 24px 0 24px;
+
     grid-template-columns: 352px 352px;
     grid-template-rows: repeat(6, 264px);
     gap: 16px;
@@ -31,9 +109,10 @@
 
 @media screen and (max-width: 320px) {
     .photo-grid {
-    width: 288px;
-    height: 2724px;
+    min-width: 288px;
+
     margin: 64px 16px 0 16px;
+
     grid-template-columns: 288px;
     grid-template-rows: repeat(12, 216px);
     gap: 12px;
