--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,26 +1,33 @@
 .place__image {
-    width: 460px;
-    height: 460px;
+    max-width: 460px;
+
     margin: 0;
 }
 
-@media screen and (max-width: 1024px) {
-    .place__image {
-        width: 440px;
-        height: 440px;
+@media screen and (max-width: 1279px) {
+    .places {
+        margin: 48px auto 0 auto;
+
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .place__image {
-        width: 340px;
-        height: 340px;
+        max-width: 440px;
+
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__image {
+        max-width: 320px;
+
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__image {
-        width: 320px;
-        height: 320px;
+        min-width: 320px;
+
     }
 }  
