--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,32 +1,35 @@
 .place__paragraphs {
-    width: 100%;
+
     display: flex;
     flex-direction: column;
     margin: 0;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 29px;
+    line-height: 163%;
     letter-spacing: 0em;
     text-align: left;
 
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .place__paragraphs {
-    font-size: 16px;
-    line-height: 26px;
+    font-size: 1rem;
+    max-width: 320px;
+    margin-left: 16px;
+    margin-right: 16px;
+
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__paragraphs {
-    width: 320px;
+    max-width: 320px;
     margin-left: 16px;
     margin-right: 16px;
-    font-size: 16px;
-    line-height: 26px;
+    font-size: 1rem;
+
     
     }
 }  
