--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,11 +1,10 @@
 .place__title {
-    width: 100%;
 
     margin: 0;
-    font-size: 72px;
+    font-size: 4.75rem;
     font-style: normal;
     font-weight: 900;
-    line-height: 76px;
+    line-height: 1;
     letter-spacing: 0em;
     text-align: left;
     display: flex;
@@ -16,16 +15,18 @@
 
 @media screen and (max-width: 768px) {
     .place__title {
-        font-size: 42px;
-        line-height: 46px;
+        max-width: 288px;
+        margin-left: 16px;
+        font-size: 2.625rem;
+        line-height: 1;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__title {
-        width: 288px;
-        font-size: 32px;
-        line-height: 35px;
+        max-width: 288px;
+        font-size: 2rem;
+        line-height: 1;
         margin-left: 16px;
     }
 }  
