--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,9 +1,15 @@
 .place__website {
-    width: 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
+
+@media screen and (max-width: 767px){
+    .place__website {
+        display: none;
+    }
+}  
 
 @media screen and (max-width: 320px) {
     .place__website {
