--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,10 +1,10 @@
 .place {
-    width: 100%;
+
     margin-top: 0px;
     margin-bottom: 80px;
     display: grid;
-    grid-template-columns: 460px 484px;
-    grid-template-rows: 1fr 460px;
+    grid-template-columns: 1fr 1fr;
+
     column-gap: 40px;
     row-gap: 48px;
 }
@@ -13,26 +13,34 @@
     margin-bottom: 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .place {
-        grid-template-columns: 440px 456px;
-        grid-template-rows: 1fr 100%;
+        grid-template-columns: 1fr 1fr;
+
         column-gap: 32px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .place {
-        grid-template-columns: 340px 352px;
-        grid-template-rows: 1fr 100%;
+        grid-template-columns: 1fr 1fr;
+
+        column-gap: 32px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place {
+        grid-template-columns: 1fr;
+
         column-gap: 28px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place {
-        grid-template-columns: 320px;
-        grid-template-rows: 1fr 320px 100%;
+        grid-template-columns: 1fr;
+
         row-gap: 32px;
         margin-bottom: 49px;
         padding-bottom: 0;
