--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,30 +1,38 @@
 .places {
     color: #FFFFFF;
-    width: 984px;
-    margin: 92px 148px 0 148px;
+    max-width: 984px;
+    margin: 92px auto 0 auto;
     display: flex;
     flex-direction: column;
 
-
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .places {
-        width: 928px;
-        margin: 92px 48px 0 48px;
+        max-width: 928px;
+        margin: 48px auto 0 auto;
+
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .places {
-        width: 720px;
-        margin: 88px 24px 0 24px;
+        max-width: 720px;
+        margin: 92px auto 0 auto;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .places {
+        max-width: 320px;
+        margin: 88px auto 0 auto;
     }
 }
 
 @media screen and (max-width: 320px) {
     .places {
-        width: 320px;
+        min-width: 320px;
         margin: 64px 0 0 0;
+        
     }
 }  
