--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,7 +4,7 @@
     z-index: 3;
     font-weight: 900;
     font-size: 4.5rem;
-    line-height: 1;
+    line-height: 76px;
     text-align: center;
 
 }
@@ -12,7 +12,6 @@
 @media screen and (max-width: 1279px) {
     .cover__title {
         margin-top: 195px;
-
     }
 }
 
@@ -27,15 +26,12 @@
         max-width: 288px;
         margin: 33px auto 0 auto;
         font-size: 2rem;
-
+        line-height: 35px;
     }
 }
-
 @media screen and (max-width: 320px) {
     .cover__title {
         margin: 33px 16px 0 16px;
-        min-width: 288px;
-        font-size: 2rem;
 
     }
 }
