--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,8 +2,7 @@
     margin: 32px auto 245px auto;
     max-width: 360px;
     font-size: 1.125rem;
-    line-height: 1;
-
+    line-height: 22px;
     z-index: 3;
     text-align: center;
     font-weight: 400;
@@ -26,14 +25,6 @@
         margin: 16px auto 33px auto;
         font-size: 0.875rem;
         max-width: 288px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .cover__subtitle {
-
-        margin: 16px auto 33px auto;
-        font-size: 0.875rem;
-        min-width: 288px;
+        line-height: 16px;
     }
 }
