--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,30 +1,24 @@
+
 .footer__copyright {
-    font-size: 0.875rem;
-    font-style: normal;
+    font-size: 14px;
+    line-height: 18px;
     font-weight: 400;
-    line-height: 1;
-    letter-spacing: 0em;
-    text-align: right;
+    padding: 0;
+    margin: 0;
+
     color: #ffffff;
-    display: flex;
-    align-self: flex-end;
 }
 
 @media screen and (max-width: 767px) {
     .footer__copyright {
-        margin-left: 16px;
-        text-align: left;
-        margin-top: 47px;
-        align-self: flex-start;
+        max-width: 288px;
+        margin-top: 48px;
+        line-height: 14px;
     }
 }
 
-
 @media screen and (max-width: 320px) {
     .footer__copyright {
-        margin-left: 0;
-        text-align: left;
-        margin-top: 47px;
-        align-self: flex-start;
+        min-width: 288px;
     }
 }
