--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,4 +1,22 @@
 .footer__links {
+    padding: 0;
+    margin: 0;
+}
+
+@media screen and (max-width: 767px) {
+    .footer__links {
+        display: flex;
+        flex-direction: column;
+        max-width: 288px;
+    }
+}
 
 
+@media screen and (max-width: 320px) {
+    .footer__links {
+        display: flex;
+        flex-direction: column;
+        min-width: 288px;
+
+    }
 }
