--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,40 +1,40 @@
+
 .footer {
-    max-width: 1184px;
-    margin: 92px auto 24px auto;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    margin: 92px auto 0 auto;
+    padding-bottom: 24px;
+    max-width: 1184px;
 }
 
 @media screen and (max-width: 1279px) {
     .footer {
+        margin: 92px auto 0;
         max-width: 928px;
     }
 }
 
+
 @media screen and (max-width: 1023px) {
     .footer {
         max-width: 720px;
-        margin: 88px auto 24px auto;
-
+        margin: 88px auto 0;
     }
 }
 
 @media screen and (max-width: 767px) {
     .footer {
-        max-width: 320px;
-
-        margin: 64px auto 24px auto;
+        max-width: 288px;
         display: flex;
         flex-direction: column;
+        margin: 64px auto 0;
     }
 }
 
-@media screen and (max-width: 320px) {
+
+@media screen and (max-width: 767px) {
     .footer {
-        min-width: 320px;
-        margin: 64px 16px 24px 16px;
-        display: flex;
-        flex-direction: column;
+        min-width: 288px;
+        margin: 64px auto 0;
     }
 }
