--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,17 +1,15 @@
 .header__lang-link {
     color: #FFFFFF;
-
     margin-right: 18px;
     margin-top: 18px;
     margin-bottom: 6px;
-    
     font-size: 1.5rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 1;
+    line-height: 28px;
     letter-spacing: 0em;
     text-align: right;
-
+    text-decoration: none;
 }
 
 .header__lang-link:hover {
@@ -19,7 +17,6 @@
 }
 
 .header__lang-link:nth-of-type(2) {
-    text-decoration: none;
     margin-right: 0;
     padding-right: 0;
 
@@ -28,10 +25,9 @@
 
 @media screen and (max-width: 767px) {
     .header__lang-link {
-
         font-size: 1.125rem;
         margin-top: 14px;
         margin-bottom: 8px;
-
+        line-height: 20px;
     }
 }
