--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,11 +1,7 @@
+
 .intro {
-    max-width: 984px;
     margin: 92px auto 0 auto;
-
-
-    color: #ffffff;
-    display: flex;
-    flex-direction: column;
+    max-width: 984px;
 }
 
 @media screen and (max-width: 1279px) {
@@ -14,25 +10,32 @@
     }
 }
 
+
 @media screen and (max-width: 1023px) {
     .intro {
         margin: 88px auto 0 auto;
         max-width: 720px;
+    }
+}
 
+
+@media screen and (max-width: 1023px) {
+    .intro {
+        margin: 88px auto 0 auto;
+        max-width: 720px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .intro {
         margin: 64px auto 0 auto;
-        max-width: 320px;
+        max-width: 288px;
 
     }
 }
 
 @media screen and (max-width: 320px) {
     .intro {
-        margin: 64px 0 0 0;
-        min-width: 320px;
+        min-width: 288px;
     }
 }
