--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,26 +1,22 @@
 .lead__caption {
 
     margin-top: 8px;
+
     margin-left: 0;
 
-    font-size: 0.6rem;
+    font-size: 0.625rem;
     font-style: normal;
     font-weight: 400;
-    line-height: 1;
+    line-height: 14px;
     letter-spacing: 0.15em;
     text-align: left;
+    text-transform: uppercase;
+
 }
 
-@media screen and (max-width: 1279px) {
-    .lead__caption {
-        margin-left: 24px;
-    }
-}
 
 @media screen and (max-width: 1023px) {
     .lead__caption {
-
-
         margin-left: 24px;
     }
 }
@@ -28,11 +24,8 @@
 @media screen and (max-width: 767px) {
     .lead__caption {
         margin-left: 16px;
+
     }
 }
 
-@media screen and (max-width: 320px) {
-    .lead__caption {
-        margin-left: 16px;
-    }
-}
+
