--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,18 +1,10 @@
 .lead__title {
     max-width: 720px;
     margin: 0 auto 32px auto;
-
     font-size: 6rem;
     font-weight: 900;
-    line-height: 1;
+    line-height: 100px;
     text-align: center;
-}
-
-@media screen and (max-width: 1279px) {
-    .lead__title {
-
-
-    }
 }
 
 @media screen and (max-width: 767px) {
@@ -20,6 +12,7 @@
         margin: 0 auto 16px auto;
         font-size: 2.5rem;
         max-width: 288px;
+        line-height: 44px;
     }
 }
 
@@ -27,9 +20,7 @@
 
 @media screen and (max-width: 320px) {
     .lead__title {
-
         margin: 0 16px 16px 16px;
-        font-size: 2.5rem;
         min-width: 288px;
     }
 }
