--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,13 +1,9 @@
 .lead {
     color: #FFFFFF;
-
     display: flex;
     flex-direction: column;
-
     max-width: 984px;
     margin: 56px auto 0 auto;
-
-
 }
 
 @media screen and (max-width: 1279px) {
@@ -21,21 +17,18 @@
     .lead {
         margin: 48px auto 0 auto;
         max-width: 720px;
-
     }
 }
 
 @media screen and (max-width: 767px) {
     .lead {
-        margin: 48px auto 0 auto;
         max-width: 320px;
-
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead {
         margin: 48px 0 0 0;
-        min-width: 320px;
+        width: 100%;
     }
 }
