--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,33 +1,27 @@
 .place__image {
     max-width: 460px;
-
-    margin: 0;
 }
 
 @media screen and (max-width: 1279px) {
-    .places {
-        margin: 48px auto 0 auto;
-
+    .place__image {
+        max-width: 440px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .place__image {
-        max-width: 440px;
-
+        max-width: 340px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .place__image {
         max-width: 320px;
-
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__image {
         min-width: 320px;
-
     }
-}  
+}
