--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,35 +1,4 @@
 .place__paragraphs {
-
-    display: flex;
-    flex-direction: column;
     margin: 0;
-    font-size: 1.125rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 163%;
-    letter-spacing: 0em;
-    text-align: left;
-
-
+    padding: 0;
 }
-
-@media screen and (max-width: 767px) {
-    .place__paragraphs {
-    font-size: 1rem;
-    max-width: 320px;
-    margin-left: 16px;
-    margin-right: 16px;
-
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .place__paragraphs {
-    max-width: 320px;
-    margin-left: 16px;
-    margin-right: 16px;
-    font-size: 1rem;
-
-    
-    }
-}  
