--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,32 +1,44 @@
 .place__title {
-
+    max-width: 460px;
     margin: 0;
-    font-size: 4.75rem;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 1;
-    letter-spacing: 0em;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    padding: 0;
 
+    font-style: normal;
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 76px;
+
+}
+
+@media screen and (max-width: 1279px) {
+    .place__title {
+        max-width: 440px;
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .place__title {
+        max-width: 340px;
+        font-size: 42px;
+        line-height: 46px;
+    }
 }
 
 @media screen and (max-width: 768px) {
     .place__title {
-        max-width: 288px;
+
         margin-left: 16px;
-        font-size: 2.625rem;
-        line-height: 1;
+        font-size: 32px;
+        line-height: 35px;
+        max-width: 288px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place__title {
-        max-width: 288px;
-        font-size: 2rem;
-        line-height: 1;
         margin-left: 16px;
+        min-width: 288px;
     }
-}  
+}
