--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
+    margin: 0 0 80px 0;
+    padding: 0;
 
-    margin-top: 0px;
-    margin-bottom: 80px;
     display: grid;
     grid-template-columns: 1fr 1fr;
 
@@ -13,37 +13,31 @@
     margin-bottom: 0;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (min-width: 1279px) {
     .place {
-        grid-template-columns: 1fr 1fr;
-
         column-gap: 32px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .place {
-        grid-template-columns: 1fr 1fr;
-
-        column-gap: 32px;
+        column-gap: 28px;
+        margin-bottom: 73px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .place {
         grid-template-columns: 1fr;
-
-        column-gap: 28px;
+        column-gap: 0;
+        row-gap: 32px;
+        max-width: 320px;
+        margin-bottom: 49px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .place {
-        grid-template-columns: 1fr;
-
-        row-gap: 32px;
-        margin-bottom: 49px;
-        padding-bottom: 0;
+        min-width: 320px;
     }
-
-}  
+}
