--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,6 +2,7 @@
     max-width: 984px;
     margin: 0 auto;
 
+
 }
 
 @media screen and (max-width: 1279px) {
@@ -12,7 +13,7 @@
 
 @media screen and (max-width: 1023px) {
     .lead__image {
-        max-width: 720px;
+        max-width: 100%;
     }
 }
 
