--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,11 @@
 .header {
     max-width: 1184px;
-    margin: 0 auto 0 auto;
+    margin: 0 auto;
     padding-top: 28px;
     display: flex;
     justify-content: space-between;
-
-
 }
+
 @media screen and (max-width: 1279px) {
     .header {
         max-width: 928px;
