--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,7 @@
 .intro {
     margin: 92px auto 0 auto;
     max-width: 984px;
+    color: #ffffff;
 }
 
 @media screen and (max-width: 1279px) {
@@ -10,7 +11,6 @@
     }
 }
 
-
 @media screen and (max-width: 1023px) {
     .intro {
         margin: 88px auto 0 auto;
@@ -18,13 +18,6 @@
     }
 }
 
-
-@media screen and (max-width: 1023px) {
-    .intro {
-        margin: 88px auto 0 auto;
-        max-width: 720px;
-    }
-}
 
 @media screen and (max-width: 767px) {
     .intro {
