--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,7 +3,7 @@
     padding: 0;
     color: #AAAAAA;
     text-transform: uppercase;
-    font-family: Inter;
+    font-family: 'Inter', ‘Arial’, sans-serif;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
